# colab-mcp-extended

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: help.md  setup.md
hooks/scripts/: launch-mcp.sh
src/colab_mcp/: __init__.py  session.py
src/colab_mcp/browser/: base.py  colab_selectors.py  playwright_backend.py  webbrowser_backend.py
src/colab_mcp/tools/: _runner.py  drive.py  execution.py  files.py  inspect.py  local_mlx.py  notebook.py  roundtrip.py  runtime.py  secrets.py
tests/: conftest.py  test_async_exec.py  test_browser_base.py  test_capture_plots.py  test_drive.py  test_inspect.py  test_lifecycle.py  test_local_mlx.py  test_playwright_actions.py  test_registration.py  test_roundtrip.py  test_runner.py  test_runtime.py  test_secrets.py  test_smoke.py  test_vmfiles.py
