[project]
name = "colab-mcp-extended"
version = "1.1.0"
description = "Extended Colab MCP server - supports opening specific Drive notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.5",
    "fastmcp==3.2.0",
    "mcp[cli]>=1.20.0",
    "pydantic>=2.12.3,<3.0.0",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "requests-oauth2client>=0.4.0",
    "google-auth-oauthlib>=0.7.0",
    "jupyter-kernel-client>=0.9.0",
]

[project.optional-dependencies]
headless = ["playwright>=1.50"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
colab-mcp = "colab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colab_mcp"]
